html/v0.4/_sources/api/gammapy.data.EventList.txt


EventList
======================

.. currentmodule:: gammapy.data

.. autoclass:: EventList
   :show-inheritance:

   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~EventList.altaz
      ~EventList.energy
      ~EventList.galactic
      ~EventList.observation_dead_time_fraction
      ~EventList.observation_live_time_duration
      ~EventList.observation_time_duration
      ~EventList.observatory_earth_location
      ~EventList.offset
      ~EventList.pointing_radec
      ~EventList.radec
      ~EventList.time

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~EventList.add_galactic_columns
      ~EventList.filter_circular_region
      ~EventList.peek
      ~EventList.plot_energy_hist
      ~EventList.plot_energy_offset
      ~EventList.plot_image
      ~EventList.plot_offset_hist
      ~EventList.plot_time_map
      ~EventList.read
      ~EventList.select_circular_region
      ~EventList.select_energy
      ~EventList.select_offset
      ~EventList.select_sky_box
      ~EventList.select_sky_cone
      ~EventList.select_sky_ring
      ~EventList.select_time
      ~EventList.summary

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: altaz
   .. autoattribute:: energy
   .. autoattribute:: galactic
   .. autoattribute:: observation_dead_time_fraction
   .. autoattribute:: observation_live_time_duration
   .. autoattribute:: observation_time_duration
   .. autoattribute:: observatory_earth_location
   .. autoattribute:: offset
   .. autoattribute:: pointing_radec
   .. autoattribute:: radec
   .. autoattribute:: time

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: add_galactic_columns
   .. automethod:: filter_circular_region
   .. automethod:: peek
   .. automethod:: plot_energy_hist
   .. automethod:: plot_energy_offset
   .. automethod:: plot_image
   .. automethod:: plot_offset_hist
   .. automethod:: plot_time_map
   .. automethod:: read
   .. automethod:: select_circular_region
   .. automethod:: select_energy
   .. automethod:: select_offset
   .. automethod:: select_sky_box
   .. automethod:: select_sky_cone
   .. automethod:: select_sky_ring
   .. automethod:: select_time
   .. automethod:: summary

   
   